--- a/templates/accounts/profile_edit.html
+++ b/templates/accounts/profile_edit.html
@@ -142,7 +142,7 @@
     input:focus,
     select:focus,
     textarea:focus {
-        border-color: #667eea;
+        border-color: #7C96AB;
         box-shadow: 0 0 0 0.2rem rgba(102, 126, 234, 0.25);
         outline: none;
     }
